--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:ui":"rm -rf build && cd ../../helsinki-web-development/part2/exercises/phonebook/ && npm run build && cp -r build ../../../../part3/helsinki-part3",
+    "deploy:full": "npm run build:ui && git add . && git commit -m create_new_build && git push origin main"
   },
   "repository": {
     "type": "git",
