--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui":"rm -rf build && cd ../../helsinki-web-development/part2/exercises/phonebook/ && npm run build && cp -r build ../../../../part3/helsinki-part3",
-    "deploy:full": "npm run build:ui && git add . && git commit -m create_new_build && git push origin main"
+    "deploy:full": "npm run build:ui && git add . && git commit -m \"3.11 phonebook full stack\" && git push origin main"
   },
   "repository": {
     "type": "git",
