--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:ui":"rm -rf build && cd ../../helsinki-web-development/part2/exercises/phonebook/ && npm run build && cp -r build ../../../../part3/helsinki-part3",
+    "build:ui": "rm -rf build && cd ../../helsinki-web-development/part2/exercises/phonebook/ && npm run build && cp -r build ../../../../part3/helsinki-part3",
     "deploy:full": "npm run build:ui && git add . && git commit -m \"3.11 phonebook full stack\" && git push origin main"
   },
   "repository": {
@@ -23,6 +23,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongoose": "^6.8.3",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
