--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf build && cd ../../helsinki-web-development/part2/exercises/phonebook/ && npm run build && cp -r build ../../../../part3/helsinki-part3",
     "deploy:full": "npm run build:ui && git add . && git commit -m \"3.19 phonebook full stack\" && git push origin main"
@@ -28,6 +30,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^8.32.0",
     "nodemon": "^2.0.20"
   }
 }
